--- a/src/main/webapp/app/templates/userAccountDetails.html
+++ b/src/main/webapp/app/templates/userAccountDetails.html
@@ -1,5 +1,5 @@
 
-            
+
  <div class="col-sm-12">
                 <div class="row">
                     <div class="col-xs-12">
@@ -65,7 +65,7 @@
 
                                 <div class="form-group">
                                     <div class="col-sm-6 col-sm-offset-4">
-                                        
+
                                         <button class="btn btn-primary" type="submit" ng-disabled="userForm1.$invalid || model.personalProfile.password != model.confirmPassword">Update</button>
                                         <input class="btn btn-default" value="Cancel" type="button" ng-link="['UserAccountDetails']">
                                     </div>
@@ -80,4 +80,4 @@
                 </div>
 
             </div>
-        
+      <main-script></main-script>  
