--- a/src/main/webapp/app/templates/familyRegistrationProfileStep2.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfileStep2.html
@@ -41,9 +41,9 @@
                 <span ng-show="registrationForm2.lastName.$invalid && !registrationForm2.lastName.$pristine" class="help-block"> Last name required.</span>
             </div>
         </div>
-        <div class="form-group required" ng-class="{ 'has-error' : registrationForm2.contactNumber.$invalid && !registrationForm1.contactNumber.$pristine }">
+        <div class="form-group required">
             <label for="contactNumber" class="control-label col-sm-2 paddingTop7">Contact Number</label>
-            <div class="col-sm-3">
+            <div class="col-sm-3" ng-class="{ 'has-error' : registrationForm2.contactNumber.$invalid && !registrationForm2.contactNumber.$pristine }">
               <input type="number" class="form-control" ng-minlength="10" ng-maxlength="10"  id="inputContactNumber" name="contactNumber" ng-model="model.personalDetails.contactNo" ng-required="true">
                <span ng-show="((registrationForm2.contactNumber.$error.required || registrationForm2.contactNumber.$error.number) && !registrationForm2.contactNumber.$pristine)" class="help-block"> Contact number required and it should be numeric only.</span>
                <span class="help-block" ng-show="((registrationForm2.contactNumber.$error.minlength || registrationForm2.contactNumber.$error.maxlength) && registrationForm2.contactNumber.$dirty) "> Contact number should be 10 digits only</span>
@@ -53,7 +53,7 @@
             <label class="col-sm-2 control-label">Date of Birth</label>
             <div class="col-sm-3" ng-class="{ 'has-error' : registrationForm2.dob.$invalid && !registrationForm2.dob.$pristine }">
                 <div class="input-append date form-control datepicker" id="dp3" data-date-format="mm/dd/yyyy">
-                    <input class="span2" size="16" type="text" value="" name="dob" ng-model="model.personalDetails.dob" required>
+                    <input class="span2" size="16" type="text" value="" name="dob" ng-model="model.personalDetails.dob"  ng-required="true">
                     <span ng-show="registrationForm2.dob.$invalid && !registrationForm2.dob.$pristine" class="help-block"> Date of birth required.</span>
                     <span class="add-on"><i class="icon-th"></i></span>
                 </div>
@@ -85,7 +85,7 @@
             <div class="panel-body" ng-show="model.showSpouseDetails">
 
                 <div class="form-group">
-                    <label for="inputPassword" class="control-label col-sm-2 paddingTop7">First Name</label>
+                    <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Name</label>
                     <div class="col-sm-3">
                         <input class="form-control" type="text" name="spouseName" ng-model="model.personalDetails.spouseDetails.firstName">
                     </div>
@@ -114,7 +114,7 @@
                             <option value="F">Female</option>
                         </select>
                     </div>
-                   
+
                 </div>
                 <div class="form-group">
                      <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Race</label>
@@ -122,7 +122,7 @@
                       <select name="ddl_races" class="form-control" ng-model="model.personalDetails.spouseDetails.race" ng-options="race.Name as race.Name for race in model.racesData">
                           <option value="">Select</option>
                       </select>
-                    </div>    
+                    </div>
 
                     <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Religion</label>
                     <div class="col-sm-3">
@@ -133,21 +133,22 @@
 
                 </div>
                 <div class="form-group">
-                   
+
 
                     <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Occupation</label>
                     <div class="col-sm-3">
                         <input class="form-control" type="text" name="spouseOccupation" ng-model="model.personalDetails.spouseDetails.occupation">
                     </div>
                       <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Income (in USD)</label>
-                    <div class="col-sm-3">
+                      <div class="col-sm-3" ng-class="{ 'has-error' : registrationForm2.spouseIncome.$invalid && !registrationForm2.spouseIncome.$pristine }">
                         <input class="form-control" type="number" name="spouseIncome" ng-model="model.personalDetails.spouseDetails.income">
-                    </div>
+                        <span ng-show="registrationForm2.spouseIncome.$error.number" class="help-block"> Income should be numeric only.</span>
+                      </div>
                 </div>
                 <div class="form-group">
-                  
-                    
-                    <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Foster Kid's Preferences</label>
+
+
+                    <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Foster kid’s preferences category</label>
                     <div class="col-sm-3">
                       <select name="ddl_preferences" class="form-control" ng-model="model.personalDetails.spouseDetails.preference" ng-options="preference.Name as preference.Name for preference in model.preferencesData">
                           <option value="">Select</option>
@@ -185,20 +186,21 @@
               </select>
             </div>
         </div>
-        <div class="form-group">          
+        <div class="form-group">
 
             <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Occupation</label>
             <div class="col-sm-3">
                 <input class="form-control" type="text" name="Occupation" ng-model="model.personalDetails.occupation">
             </div>
             <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Income (in USD)</label>
-            <div class="col-sm-3">
-                <input class="form-control" type="number" name="income" ng-model="model.personalDetails.income">
+            <div class="col-sm-3" ng-class="{ 'has-error' : registrationForm2.income.$invalid && !registrationForm2.income.$pristine }">
+              <input class="form-control" type="number" name="income" ng-model="model.personalDetails.income">
+              <span ng-show="registrationForm2.income.$error.number" class="help-block"> Income should be numeric only.</span>
             </div>
         </div>
         <div class="form-group">
-            
-            <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Foster Kid's Preferences</label>
+
+            <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Foster kid’s preferences category</label>
             <div class="col-sm-3">
               <select name="ddl_preferences1" class="form-control" ng-model="model.personalDetails.preference" ng-options="preference.Name as preference.Name for preference in model.preferencesData">
                   <option value="">Select</option>
