--- a/src/main/webapp/app/templates/fosterCareAgencies.html
+++ b/src/main/webapp/app/templates/fosterCareAgencies.html
@@ -2,7 +2,9 @@
 
   <div class="form-horizontal marginTop20">
 
-
+    <div ng-if="model.isAgenciesAvailable == 'default'" class="text-center">
+      <img src="./contents/images/loading.gif" alt="" id="loading">
+    </div>
 
     <div id="searchResult" ng-if="model.isAgenciesAvailable != 'default'">
       <h4>Search Results</h4>
@@ -21,8 +23,8 @@
 
       </div>
       <div ng-if="model.isAgenciesAvailable == 'no'">
-        <div class="alert alert-warning" role="alert"><h3>No agencies available for your location.</h3></div>
-        
+        <div class="alert alert-warning" role="alert">No foster care agencies found in nearby location.</div>
+
       </div>
     </div>
 
