--- a/src/main/webapp/app/templates/userLicense.html
+++ b/src/main/webapp/app/templates/userLicense.html
@@ -1,5 +1,5 @@
 
-            
+
  <div class="col-sm-12">
                 <div class="row">
                     <div class="col-xs-12">
@@ -54,8 +54,8 @@
                      <div class="form-group required">
                          <label class="col-sm-4 control-label">Date of Issue</label>
                          <div class="col-sm-6 ">
-                             <div class="input-append date form-control datepicker" id="dp3" data-date-format="mm/dd/yyyy">
-                                 <input class="span2" size="16" type="text" name="dateofissue" id="dateofissue" ng-model=" model.licencedetails.dateofissue" required>
+                             <div class="input-append date form-control datepicker" id="dp3" data-date-format="mm/dd/yyyy" ng-disabled="model.haveLicense == 'y'">
+                                 <input class="span2" size="16" type="text" name="dateofissue" id="dateofissue" ng-model=" model.licenceDetails.dateOfIssue" required ng-disabled="model.haveLicense == 'y'">
                                  <p ng-show="userForm4.dateofissue.$invalid && !userForm4.dateofissue.$pristine" class="help-block">Enter Date Of Issue.</p>
                                  <span class="add-on"><i class="icon-th"></i></span>
                              </div>
@@ -95,15 +95,9 @@
      </div>
 
             </div>
-        
 
+<main-script></main-script>
 <script language="javascript">
-
-    $(document).ready(function () {
-
-    });
-
-
 
     $('.datepicker').datepicker();
 </script>
