--- a/src/main/webapp/app/templates/userPreferences.html
+++ b/src/main/webapp/app/templates/userPreferences.html
@@ -1,5 +1,5 @@
 
-            
+
  <div class="col-sm-12">
                 <div class="row">
                     <div class="col-xs-12">
@@ -56,7 +56,7 @@
                              </p>
                          </div>
                      </div>
-                     
+
                      <div ng-show="model.familyDetails.haveKids == 'y'">
                          <div class="form-group  required" id="dv_numofkids">
                              <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Number of Kids</label>
@@ -145,4 +145,4 @@
      </div>
 
             </div>
-        
+<main-script></main-script>        
