--- a/src/main/webapp/app/templates/userStatus.html
+++ b/src/main/webapp/app/templates/userStatus.html
@@ -22,3 +22,4 @@
     <div class="col-sm-6 col-md-3 marginTop20"><a href="javascript:void(0)"><img src="./contents/images/trainingVideos.jpg" width="266" height="265" alt="" class="img-responsive marginAuto" /></a></div>
     <div class="col-sm-6 col-md-3 marginTop20"><a href="javascript:void(0)"><img src="./contents/images/stateFosterCareInfor.jpg" width="266" height="265" alt="" class="img-responsive marginAuto " /></a></div>
 </div>
+<main-script></main-script>
