--- a/src/main/webapp/contents/css/portal.css
+++ b/src/main/webapp/contents/css/portal.css
@@ -220,3 +220,9 @@ h1, h4{color: #3f67c0}
 	width: 100%;
 	height: 300px;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
