--- a/src/main/webapp/app/templates/familyRegistrationProfileStep3.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfileStep3.html
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                          <div class="form-group required" ng-class="{ 'has-error' : registrationForm.kidsPreference.$invalid && !registrationForm.kidsPreference.$pristine }">
-                            <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Please be open in expressing your Kids behaviour, emotional and other preferences</label>
+                            <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Please be open in expressing your Kids behavior, emotional and other preferences</label>
                             <div class="col-sm-6 paddingTop7">
                                 <textarea type="text" rows="4" class="form-control" name="kidsPreference" ng-model="model.familyDetails.kidsPref" required></textarea>
                                 <span ng-show="registrationForm.kidsPreference.$invalid && !registrationForm.kidsPreference.$pristine" class="help-block"> Desription required.</span>
